Added home link to footer. Displays on all pages except home page and place ad pages.

--- a/css/style.css
+++ b/css/style.css
@@ -1977,6 +1977,10 @@ a.red_button_small.remove_ad_button {
 	color: #ec281f;
 }
 
+#footer a.green {
+  color: #009a15;
+}
+
 #demotip { 
     display:none; 
     background:transparent url(../img/black_arrow.png); 
