--- a/css/menu.css
+++ b/css/menu.css
@@ -142,10 +142,13 @@
 }
 
 #menu li a.active.sub  {
-	background: transparent url(../img/menu_hover_bg2.jpg) repeat-x;
+	/*background: transparent url(../img/menu_hover_bg2.jpg) repeat-x;*/
+  background-image: none;
+  background-color: #b8b8b8;
+  border-top: 1px solid #9d9d9d;
+  border-bottom: 1px solid #9d9d9d;
 	color: #fff;
-  border: none;
-	padding: 6px 12px 8px 12px;
+	padding: 5px 12px 7px 12px;
 }
 
 #menu li a:hover, #menu li a.active, #menu li a.active.sub:hover {
