--- a/css/style.css
+++ b/css/style.css
@@ -1828,7 +1828,7 @@ a#report_ad.active {
 	color: #000;
 	width: 668px;
 	height: 74px;
-	border: 1px solid #fff;
+	border: 1px solid #c6e1f8;
 	position: relative;
 	list-style-type: none;
 	cursor: pointer;
