--- a/css/style.css
+++ b/css/style.css
@@ -1102,7 +1102,7 @@ a.checkbox.checked {
 #header {
 	width: 100%;
 	height: 69px;
-	background: transparent url(../img/header_bg_dark.jpg) repeat-x;
+	background: transparent url(../img/header_bg_dark.png) repeat-x;
 	border-bottom: 4px solid #b3c0d3;
 }
 
