Updated stars and some other layout tweaks.

--- a/css/menu.css
+++ b/css/menu.css
@@ -12,7 +12,7 @@
 	-moz-border-radius: 5px;
 	-webkit-border-radius: 5px;
   border-radius: 5px;
-  border: 1px solid #cfe8fc;
+  border: 1px solid #c5d6f5;
 }
 
 #menu li {
