--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ h1 a {
 	float: left;
 }
 
-h1 a:active {
+h1 a.press {
   top: 16px;
 }
 
@@ -209,6 +209,7 @@ a.button, a.green_button, a.red_button, a.blue_button, a.button_white_border, a.
     padding-left: 4px;
     text-decoration: none;
     position: relative;
+	top: 0;
 }
 
 a.green_button {
@@ -350,6 +351,10 @@ a.black_button {
   position: relative;
 }
 
+a.black_button.press {
+	top: 1px;
+}
+
 a.black_button span, a.big_button span {
     background: transparent url(../img/black_button_right.png) right top no-repeat;
     display: block;
@@ -418,8 +423,8 @@ a.blue_button_small span {
 	background: transparent url(../img/blue_button_small_right.png) right top no-repeat;
 }
 
-a#start_over_button:active {
-  margin-top: 1px;
+a#start_over_button.press {
+  top: 1px;
 }
 
 a.small_button.photo {
@@ -646,6 +651,10 @@ span.price_burst {
     line-height: 21px;
     text-indent: -9000px;
     cursor: pointer;
+}
+
+span.price_burst.press {
+	top: 0;
 }
 
 input.text, textarea.text, input.password, input#q {
@@ -1134,7 +1143,7 @@ a.checkbox.checked {
 }
 
 #container {
-	width: 862px;
+	width: 860px;
 	margin: 5px auto 0 auto;
 	text-align: left;
 }
@@ -1225,7 +1234,7 @@ a.checkbox.checked {
 	-moz-border-radius: 5px;
 	-webkit-border-radius: 5px;
   border-radius: 5px;
-  border: 1px solid #cfe8fc;
+  border: 1px solid #c5d6f5;
 }
 
 #container .form_section .content {
@@ -1391,7 +1400,7 @@ a.checkbox.checked {
 	color: #999;
 }
 
-#container .subcategory a:active img {
+#container .subcategory a.press img {
 	top: 1px;
 }
 
@@ -1830,7 +1839,7 @@ a#report_ad.active {
 	color: #000;
 	width: 668px;
 	height: 74px;
-	border: 1px solid #cfe8fc;
+	border: 1px solid #c5d6f5;
 	position: relative;
 	list-style-type: none;
 	cursor: pointer;
@@ -1898,17 +1907,27 @@ a#report_ad.active {
 }
 
 .item_price {
-	margin: 0px 5px 0px 0px;
+	margin: 1px 7px 0px 0px;
 	position: absolute;
 	right: 0px;
 	float: right;
+	color: #aaa;
+}
+
+.active .item_price {
+	color: #fff;
 }
 
 .remove_ad_buttons {
 	position: absolute;
 	bottom: 5px;
-	right: 5px;
+	right: 7px;
 	z-index: 3;
+	color: #ed5072;
+}
+
+.active .remove_ad_buttons {
+	color: #fff;
 }
 
 a.red_button_small.remove_ad_button {
@@ -2089,16 +2108,13 @@ a#saved_ads {
 
 .item .stars {
   position: absolute;
-  top: 25px;
-  right: -35px;
+  top: 29px;
+  right: -33px;
 }
 
 .stars:hover, .stars.active { background-position: center 0; }
 
-.stars.active {
-  background-position: center -32px;
-  padding-top: 18px;
-}
+.stars.active { background-position: center -32px; }
 
 .stars:hover { background-position: center -16px; }
 
