Added home icon to footer. Updated password change UI. Fixed thumbnail rollover bug.

--- a/css/style.css
+++ b/css/style.css
@@ -2082,6 +2082,8 @@ a#saved_ads {
   top: 2px;
 }
 
+#footer a.home-icon img { width: 14px; height: 14px; }
+
 #demotip { 
     display:none; 
     background:transparent url(../img/black_arrow.png); 
