Fixed some ajax password/login issues.

--- a/css/style.css
+++ b/css/style.css
@@ -100,6 +100,11 @@ p.error a, p.success a {
 	color: #fff;
 }
 
+p.success + p {
+  margin-top: -240px;
+  text-align: center;
+}
+
 p.important {
 	padding-top: 10px;
 	color: #c00;
