--- a/css/style.css
+++ b/css/style.css
@@ -306,6 +306,10 @@ a.dark_button span {
 	background-image: url(../img/dark_button_right.png);
 }
 
+a#edit_button span {
+  padding: 5px 6px 5px 2px;
+}
+
 a.button.arrow_left img {
 	float: left;
 	margin: 8px 0px 0px 8px;
@@ -1081,6 +1085,16 @@ label.long {
   width: auto;
 }
 
+.field_options.no-emails {
+  clear: right;
+  float: right;
+  margin: 4px 30px 0 0;
+}
+
+.field_options.no-emails a {
+  color: #666;
+}
+
 #wikipedia_link {
   float: right;
   margin: 13px 10px 0 0;
@@ -1111,7 +1125,7 @@ label.err.show {
 }
 
 a.checkbox {
-	background: transparent url(../img/checkbox.gif) left -17px no-repeat;
+	background: transparent url(../img/checkbox.png) left -17px no-repeat;
 	padding-left: 18px;
 	text-decoration: none;
 	font-size: 12px;
